# parol-social

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FEDERATION-IMPLEMENTATION.md  GETTING-STARTED.md  IMPLEMENTATION_STATUS.md  LICENSE-APACHE  LICENSE-MIT  README.md  STARTUP-GUIDE.md  THREAT_MODEL.md  build.sh  deploy.sh  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml
crates/parolnet-authority-cli/: Cargo.toml
crates/parolnet-authority-cli/src/: main.rs
crates/parolnet-conformance/: Cargo.toml
crates/parolnet-conformance/tests/: pnp_001_outer_frame.rs  pnp_001_wire.rs  pnp_002_identity_rotation.rs  pnp_004_relay_circuit.rs  pnp_005_gossip.rs  pnp_007_media_file.rs  pnp_008_federation.rs  pnp_008_presence.rs  pnp_009_sender_key.rs
crates/parolnet-core/: Cargo.toml
crates/parolnet-core/src/: audio.rs  bootstrap.rs  call.rs  config.rs  error.rs  file_transfer.rs  group.rs  group_call.rs  group_file.rs  identity_rotation.rs  lib.rs  panic.rs  session.rs  time_compat.rs  video.rs
crates/parolnet-core/tests/: core_tests.rs  group_integration.rs  integration_tests.rs
crates/parolnet-crypto/src/: aead.rs  deniable.rs  double_ratchet.rs  error.rs  identity.rs  lib.rs  sender_key.rs  x3dh.rs
crates/parolnet-crypto/tests/: crypto_tests.rs
crates/parolnet-mesh/: Cargo.toml
crates/parolnet-mesh/src/: connection_pool.rs  discovery.rs  federation.rs  gossip.rs  lib.rs  peer_manager.rs  peer_table.rs  replay.rs  store_forward.rs  sync.rs
crates/parolnet-mesh/tests/: mesh_tests.rs
crates/parolnet-protocol/: Cargo.toml
crates/parolnet-protocol/src/: address.rs  codec.rs  envelope.rs  ephemeral.rs  error.rs  federation.rs  file.rs  gossip.rs  group.rs  identity_rotation.rs  lib.rs  media.rs  message.rs  padding.rs
crates/parolnet-protocol/tests/: protocol_tests.rs
crates/parolnet-relay/: Cargo.toml  build.rs
crates/parolnet-relay-server/: Cargo.toml
crates/parolnet-relay-server/src/: identity.rs  lib.rs  main.rs
crates/parolnet-relay-server/tests/: identity_persistence.rs
crates/parolnet-relay/src/: circuit.rs  directory.rs  error.rs  federation.rs  federation_codec.rs  federation_link.rs  federation_replay.rs  handshake.rs  lib.rs  onion.rs  pool.rs  presence.rs  relay_node.rs  trust_roots.rs
crates/parolnet-relay/src/bootstrap/: bundle.rs  dns.rs  https.rs  mod.rs  seed.rs
crates/parolnet-relay/tests/: relay_tests.rs
crates/parolnet-transport/: Cargo.toml
crates/parolnet-transport/src/: ble.rs  domain_front.rs  lib.rs  noise.rs  obfs.rs  pluggable.rs  tls_camouflage.rs  tls_stream.rs  websocket.rs  websocket_listener.rs  wifi_direct.rs
crates/parolnet-transport/tests/: transport_tests.rs
crates/parolnet-wasm/: Cargo.toml  build.rs
crates/parolnet-wasm/src/: bindings.rs  circuit.rs  federation.rs  lib.rs  websocket.rs
crates/parolnet-wasm/tests/: wasm_tests.rs
ops/: deploy-secondary.md  turn.md
ops/turn/: coturn.conf.example
pwa/: .gitignore  app.js  build.mjs  build.sh  crypto-store.js  data-export.js  index.html  kill-sw.html  network-config.js  qrdecoder.js  relay-client.js  styles.css  sw.js
pwa/lang/: ar.json  de.json  en.json  es.json  fa.json  fr.json  it.json  ja.json  ko.json  my.json  pt.json  ru.json  tr.json  vi.json  zh-CN.json  zh-TW.json
pwa/pkg/: parolnet_wasm.d.ts  parolnet_wasm.js  parolnet_wasm_bg.wasm  parolnet_wasm_bg.wasm.d.ts
pwa/src/: boot.js  connection.js  db.js  i18n.js  messaging.js  onion.js  peer-relay-cache.js  protocol-constants.js  safety-number.js  settings.js  state.js  telemetry.js  token-pool.js  ui-chat.js  utils.js  views.js  webrtc.js
pwa/tests/: unit.test.mjs
server/: README.md  entrypoint.sh  index.html  install.html  nginx.conf  turnserver.conf
specs/: PNP-001-wire-protocol.md  PNP-002-handshake-protocol.md  PNP-003-bootstrap-protocol.md  PNP-004-relay-circuit.md  PNP-005-gossip-mesh.md  PNP-006-traffic-shaping.md  PNP-007-media-file-transfer.md  PNP-008-relay-federation.md  PNP-008-tracker-signaling.md  PNP-009-group-communication.md  SPEC-INDEX.md
specs/vectors/PNP-001/: fragment_constants.json  fragment_duplicate.json  fragment_happy_path.json  fragment_out_of_order.json  fragment_timeout.json
specs/vectors/PNP-008/: bootstrap_bundle_freshness.json  bootstrap_bundle_version_byte.json  bootstrap_channel_timeout.json  bootstrap_dht_salt.json  bootstrap_https_content_type.json  federation_close_codes.json  federation_link_framing.json  pluggable_transport_obfuscation.json  pluggable_transport_registry.json
xtask/src/: main.rs
