[workspace]
resolver = "2"
members = [
    "crates/parolnet-crypto",
    "crates/parolnet-protocol",
    "crates/parolnet-transport",
    "crates/parolnet-mesh",
    "crates/parolnet-relay",
    "crates/parolnet-core",
    "crates/parolnet-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.91"

[workspace.dependencies]
# Workspace internal
parolnet-crypto = { path = "crates/parolnet-crypto" }
parolnet-protocol = { path = "crates/parolnet-protocol" }
parolnet-transport = { path = "crates/parolnet-transport" }
parolnet-mesh = { path = "crates/parolnet-mesh" }
parolnet-relay = { path = "crates/parolnet-relay" }
parolnet-core = { path = "crates/parolnet-core", default-features = false }

# Crypto
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
zeroize = { version = "1", features = ["derive"] }
subtle = "2"

# Serialization
ciborium = "0.2"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"

# Async / Networking
tokio = { version = "1", features = ["full"] }
rustls = "0.23"
webpki-roots = "0.26"
tokio-tungstenite = "0.26"
tokio-rustls = "0.26"

# Error handling / logging
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"

# WASM
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"

# Utilities
curve25519-dalek = "4"
futures-util = "0.3"
hex = "0.4"

# Audio codecs
opus-rs = "0.1"
codec2 = "0.3"

# Testing
proptest = "1"
tokio-test = "0.4"
rcgen = "0.13"
