[package]
name = "parolnet-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "ParolNet client library: session management, bootstrap, panic wipe, decoy mode"

[dependencies]
parolnet-crypto.workspace = true
parolnet-protocol.workspace = true
parolnet-transport.workspace = true
parolnet-mesh.workspace = true
parolnet-relay.workspace = true
tokio.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
ciborium.workspace = true
hmac.workspace = true
sha2.workspace = true
subtle.workspace = true
rand.workspace = true
zeroize.workspace = true
serde_bytes.workspace = true
opus-rs.workspace = true
codec2.workspace = true

[dev-dependencies]
tokio-test.workspace = true
x25519-dalek.workspace = true
hex.workspace = true
parolnet-crypto.workspace = true
parolnet-protocol.workspace = true
parolnet-relay.workspace = true
