[package]
name = "parolnet-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "ParolNet client library: session management, bootstrap, panic wipe, decoy mode"

[features]
default = ["native"]
native = ["parolnet-transport", "parolnet-mesh", "parolnet-relay", "tokio", "tracing-subscriber", "opus-rs", "codec2"]

[dependencies]
parolnet-crypto.workspace = true
parolnet-protocol.workspace = true
parolnet-transport = { workspace = true, optional = true }
parolnet-mesh = { workspace = true, optional = true }
parolnet-relay = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, optional = true }
async-trait.workspace = true
ciborium.workspace = true
hmac.workspace = true
sha2.workspace = true
subtle.workspace = true
rand.workspace = true
x25519-dalek.workspace = true
zeroize.workspace = true
serde_bytes.workspace = true
# web-time removed — it pulls in performance.now() which breaks WASM instantiation
opus-rs = { workspace = true, optional = true }
codec2 = { workspace = true, optional = true }

[dev-dependencies]
tokio-test.workspace = true
x25519-dalek.workspace = true
hex.workspace = true
ciborium.workspace = true
parolnet-crypto.workspace = true
parolnet-protocol.workspace = true
parolnet-transport.workspace = true
parolnet-relay.workspace = true
