[package]
name = "parolnet-mesh"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Mesh networking for ParolNet: peer discovery, gossip protocol, store-and-forward"

[dependencies]
parolnet-crypto.workspace = true
parolnet-protocol.workspace = true
parolnet-transport.workspace = true
tokio.workspace = true
rand.workspace = true
serde.workspace = true
ciborium.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
ed25519-dalek.workspace = true

[dev-dependencies]
tokio-test.workspace = true
