[package]
name = "parolnet-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "ParolNet wire protocol: message format, envelope, padding, CBOR codec"

[dependencies]
parolnet-crypto.workspace = true
ciborium.workspace = true
serde.workspace = true
serde_bytes.workspace = true
rand.workspace = true
sha2.workspace = true
hex.workspace = true
tracing.workspace = true
thiserror.workspace = true
zeroize.workspace = true
ed25519-dalek.workspace = true
subtle.workspace = true

[dev-dependencies]
proptest.workspace = true
