[package]
name = "parolnet-relay-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "WebSocket relay server for ParolNet — routes encrypted messages between peers"

[[bin]]
name = "parolnet-relay"
path = "src/main.rs"

[dependencies]
parolnet-mesh.workspace = true
parolnet-protocol.workspace = true
parolnet-transport.workspace = true
axum = { workspace = true, features = ["ws"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower-http.workspace = true
futures-util.workspace = true
rand.workspace = true
async-trait.workspace = true
hex.workspace = true
ed25519-dalek.workspace = true
sha2.workspace = true
parolnet-relay.workspace = true
ciborium.workspace = true
reqwest.workspace = true

[features]
analytics = []
