[package]
name = "parolnet-relay-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "WebSocket relay server for ParolNet — routes encrypted messages between peers"

[lib]
name = "parolnet_relay_server"
path = "src/lib.rs"

[[bin]]
name = "parolnet-relay"
path = "src/main.rs"

[dependencies]
parolnet-mesh.workspace = true
parolnet-protocol.workspace = true
parolnet-transport.workspace = true
axum = { workspace = true, features = ["ws"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower-http.workspace = true
futures-util.workspace = true
rand.workspace = true
async-trait.workspace = true
hex.workspace = true
ed25519-dalek.workspace = true
sha2.workspace = true
parolnet-relay.workspace = true
parolnet-crypto.workspace = true
x25519-dalek.workspace = true
ciborium.workspace = true
reqwest.workspace = true
rustls.workspace = true
hmac.workspace = true
sha1.workspace = true
base64.workspace = true

[dev-dependencies]
hex.workspace = true

[features]
analytics = []
