[package]
name = "parolnet-relay"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Onion-routed relay circuits for ParolNet (PNP-004)"

[dependencies]
parolnet-crypto.workspace = true
parolnet-protocol.workspace = true
parolnet-transport.workspace = true
tokio.workspace = true
rand.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
ed25519-dalek.workspace = true
x25519-dalek.workspace = true
hex.workspace = true
zeroize.workspace = true

[dev-dependencies]
tokio-test.workspace = true
