[package]
name = "parolnet-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Pluggable transports for ParolNet: TLS streams, WebSocket, traffic shaping, DPI evasion"

[dependencies]
parolnet-crypto.workspace = true
parolnet-protocol.workspace = true
tokio.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
webpki-roots.workspace = true
tokio-tungstenite.workspace = true
rand.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
futures-util.workspace = true

[dev-dependencies]
tokio-test.workspace = true
