[package]
name = "parolnet-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "WASM bindings for ParolNet — exposes crypto + protocol to JS/TS PWA shell"
repository = "https://github.com/nightness/parolnet"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
parolnet-crypto.workspace = true
parolnet-protocol.workspace = true
parolnet-core = { workspace = true, features = ["wasm"] }
wasm-bindgen.workspace = true
web-sys = { workspace = true, features = [
    "WebSocket",
    "MessageEvent",
    "BinaryType",
    "Window",
    "Performance",
] }
js-sys.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
hex.workspace = true
sha2.workspace = true
ed25519-dalek.workspace = true
ciborium.workspace = true
serde_bytes.workspace = true
subtle.workspace = true
getrandom_02.workspace = true
getrandom_03.workspace = true
zeroize.workspace = true
console_error_panic_hook = "0.1"

[dev-dependencies]
serial_test = "3"
